plugins/devkit/devkit-kotlin-tests/testData/inspections/listenerImplementationMustNotBeDisposable/DisposableProjectListener.kt
import com.intellij.openapi.Disposable

class <error descr="Listener implementation must not implement 'Disposable'">MyProjectListener</error> : BaseListenerInterface, Disposable